<resources>
    <string name="app_name">Songly</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="songly">SONGLY</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="not_yet_registered_register_here">Not yet registered? Register Here.</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth (MM/DD/YY)</string>
    <string name="already_registered_login_here">Already Registered? Login Here.</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
</resources>